# OM1-sim

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  _typos.toml  docker-compose.yml  launch-om1sim.sh  launch-ros.sh
.github/workflows/: lint.yml  ros2-build.yml
champ/include/champ/: LICENSE
champ/include/champ/bla/: basic_linear_algebra.h
champ/include/champ/kinematics/: kinematics.h
champ/include/champ/leg_controller/: leg_controller.h
champ/include/champ/quadruped_base/: quadruped_base.h  quadruped_components.h
champ_base/config/ekf/: base_to_footprint.yaml
champ_base/src/: message_relay_node.cpp
cyclonedds/: cyclonedds.xml
gazebo_sim/champ/include/champ/: README.md
gazebo_sim/champ/include/champ/body_controller/: body_controller.h
gazebo_sim/champ/include/champ/geometry/: geometry.h
gazebo_sim/champ_base/: .gitignore  CMakeLists.txt
gazebo_sim/champ_base/config/ekf/: footprint_to_odom.yaml
gazebo_sim/champ_base/config/velocity_smoother/: velocity_smoother.yaml
gazebo_sim/champ_base/include/: actuator.h  message_relay.h  quadruped_controller.h  state_estimation.h
gazebo_sim/champ_base/src/: message_relay.cpp  quadruped_controller.cpp  quadruped_controller_node.cpp  state_estimation.cpp  state_estimation_node.cpp
gazebo_sim/champ_msgs/: package.xml
gazebo_sim/champ_msgs/msg/: Contacts.msg  PointArray.msg
gazebo_sim/go2_description/: CMakeLists.txt
gazebo_sim/go2_description/models/aruco_marker/: model.sdf
gazebo_sim/go2_description/urdf/: lidar_4D_lidar.xacro  unitree_go2_robot.xacro  velodyne.xacro
gazebo_sim/go2_description/worlds/: default.sdf  home_world.sdf  maze_world.sdf  walled_world.sdf
gazebo_sim/go2_sim/: CMakeLists.txt
gazebo_sim/go2_sim/config/gait/: gait.yaml
gazebo_sim/go2_sim/config/links/: links.yaml
gazebo_sim/go2_sim/config/ros_control/: ros_control.yaml
gazebo_sim/go2_sim/go2_sim/: go2_lowstate.py  go2_remapping.py  go2_sport.py
gazebo_sim/go2_sim/launch/: go2_launch.py
gazebo_sim/go2_sim/rviz/: rviz.rviz
gazebo_sim/om_path/: package.xml  setup.cfg  setup.py
go2_description/models/aruco_marker/: model.config
go2_description/urdf/: unitree_go2_gazebo.xacro
go2_sim/: package.xml
go2_sim/go2_sim/: go2_sport.py
isaac_sim/: CMakeLists.txt  lowstate_node.py  package.xml  run.py  utils.py
isaac_sim/assets/environment/: Modern_Apartment.usdz
isaac_sim/assets/tron1/usd/: configuration
isaac_sim/checkpoints/go2/params/: velocity_env_cfg.py
isaac_sim/checkpoints/tron1/exported/: encoder.pt  policy.pt
isaac_sim/checkpoints/tron1/params/: deploy.yaml
isaac_sim/launch/: isaac_sim_launch.py  isaac_sim_launch_all_in_one.py  isaac_sim_launch_support_nodes.py
om_api/: CMakeLists.txt  package.xml
om_api/msg/: OMPersonGreetingStatus.msg
om_path/om_path/: om_path_node.py
unitree_go/: CMakeLists.txt  package.xml
unitree_go/msg/: HeightMap.msg
zenoh/: zenoh_bridge_config.json5
(+8 files in other folders)
