<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_sim</name>
  <version>0.1.0</version>
  <description>Unitree Isaac Sim simulation for OM1</description>
  <maintainer email="hello@openmind.com">OpenMind</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>go2_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
